--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.bit.apps.kanadra"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -38,7 +38,6 @@ dependencies {
     }
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support:recyclerview-v7:23.4.0'
@@ -54,8 +53,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
-    compile 'com.google.android.gms:play-services-maps:8.3.0'
-    testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
+    testCompile 'junit:junit:4.12'
 }
